--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 Bugs
     Arreglar el closeTab para que no cierre paths no abiertos
+    Si guardas un new file, cancelas y guardas hay errores
 
 Save as (opcional)
 
@@ -15,3 +16,6 @@ Preferencias
     Color de fondo
     Color de fuente
     Tipo de fuente
+
+Autocompletar
+    Parentesis
