--- a/install
+++ b/install
@@ -2,5 +2,6 @@
 
 case "$1" in
     "deps")     sudo apt install qt5-qmake qtbase5-dev;;
+    "bare")     qmake && make;;
     *)          qmake && make && sudo mv fibedit /usr/local/bin/;;
 esac
