--- a/install
+++ b/install
@@ -3,5 +3,5 @@
 case "$1" in
     "deps")     sudo apt install qt5-qmake qtbase5-dev;;
     "bare")     qmake && make;;
-    *)          qmake && make && sudo mv fibedit /usr/local/bin/;;
+    *)          qmake && make && sudo mv fibedit /usr/local/bin/ && make distclean;;
 esac
